--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -36,6 +36,7 @@
     background: var(--color-green);
     border-radius: 15px;
     color: #fff;
+    text-decoration: none;
     font-weight: 600;
     transition: all .3s;
     cursor: pointer;
