--- a/public/css/main.css
+++ b/public/css/main.css
@@ -187,37 +187,6 @@
     font-size: 20px;
     margin-bottom: 20px;
 }
-.fun_main_img_container {
-    width: 50%;
-    height: 750px;
-    overflow: hidden;
-    border-radius: 20px;
-}
-.fun_img_container {
-    width: 100%;
-    height: 365px;
-    border-radius: 20px;
-    overflow: hidden;
-}
-.fun_main_img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-.fun_images {
-    padding-left: 30px;
-    width: 50%;
-}
-.fun_img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-.fun_img_container:nth-child(1) {
-    margin-bottom: 20px;
-}
 .milk_img_container {
     width: 50%;
     height: 500px;
@@ -286,9 +255,34 @@
 .his_text {
     width: 40%;
 }
-
 .entertainments {
-    
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+}
+.entertainment_img_container {
+    width: 100%;
+    overflow: hidden;
+    border-radius: 10px;
+    height: 300px;
+}
+.entertainment_img_container:nth-child(1) {
+    grid-row: span 2;
+    height: calc(600px + 10px);
+}
+.entertainments:only-child > .entertainment_img_container:nth-child(2) {
+    grid-row: span 2;
+    height: calc(600px + 10px);
+}
+.entertainments > :only-child {
+    grid-column: span 2;
+}
+.entertainment_img_container img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
 }
 
 /* MEDIA QUARIES */
@@ -316,15 +310,6 @@
     .marry_img {
         width: 100%;
         margin-top: 20px;
-    }
-    .fun_images {
-        width: 100%;
-        padding-left: 0px;
-    }
-    .fun_main_img_container, .fun_img_container {
-        width: 100%;
-        height: 300px;
-        margin-bottom: 20px;
     }
     .houses {
         flex-wrap: wrap;
@@ -355,6 +340,12 @@
     .his_text {
         width: 100%;
     }
+    .entertainment_img_container {
+        height: 200px;
+    }
+    .entertainment_img_container:nth-child(1) {
+        height: calc(400px + 10px);
+    }
 }
 
 @media (max-width: 650px) {
@@ -366,6 +357,12 @@
     }
     .welcome_title span {
         font-size: 60px;
+    }
+    .entertainment_img_container {
+        height: 150px;
+    }
+    .entertainment_img_container:nth-child(1) {
+        height: calc(300px + 10px);
     }
 }
 @media (max-width: 455px) {
