--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -67,7 +67,9 @@
     border: none;
     border-bottom: 1px solid var(--color-black);
     border-radius: 3px;
+    padding: 5px;
 }
 .modal_input_wrapper textarea {
     font-size: 16px;
+    padding: 5px;
 }
