--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,370 +1,284 @@
 .welcome {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 100%;
-    height: calc(100vh - 120px);
-    background: url(/images/welcome.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    filter: saturate(200%);
-    font-family: 'Montserrat Alternates', sans-serif;
-    font-size: 70px;
-    font-weight: 900;
-    text-align: center;
-    color: #fff;
-    text-shadow: 5px 0px 5px var(--color-black);
-}
-.welcome span {
-    font-size: 100px;
-}
-.learn_more {
-    text-decoration: none;
-    color: #fff;
-    font-size: 24px;
-    text-shadow: 0px 0px 5px var(--color-black);
-    background: var(--color-yellow);
-    border-radius: 15px;
-    padding: 10px;
-    border: 3px solid transparent;
-    transition: all .3s;
-    cursor: pointer;
-}
-.learn_more:hover {
-    background: transparent;
-    border: 3px solid var(--color-yellow);
-}
-.header {
-    font-family: 'Montserrat Alternates', sans-serif;
-    color: #1B1A18;
-    font-size: 26px;
-    font-weight: 700;
-    margin-bottom: 20px;
-}
-.text {
-    color: #1B1A18;
-    font-size: 20px;
-    font-weight: 400;
-}
-.tours_slider_box {
+    height: 800px;
+    background: url(../images/welcome.png);
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
-.track_box {
-    width: 430px;
-    padding: 0px 40px;
+.welcome_block {
+    max-width: 50%;
 }
-.tours {
-    overflow: hidden;
-}
-.tour {
-    background: var(--color-gray);
-    border-radius: 60px;
-    padding: 15px 15px 30px;
-    width: 420px;
-}
-.tour .box {
-    height: 200px;
-    width: 320px;
-    overflow: hidden;
-    border-radius: 40px;
-}
-.box img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-.tour_header {
-    color: #1B1A18;
-    font-size: 22px;
+.welcome_title {
+    color: var(--color-white);
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.50);
+    font-family: Oswald;
+    font-size: 50px;
     font-weight: 700;
+    text-transform: uppercase;
 }
-.tour_text {
-    color: #616161;
+.welcome_text {
+    color: var(--color-white);
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    font-family: Inter;
     font-size: 18px;
-    font-weight: 400;
+    line-height: 150%;
+    margin-top: 25px;
 }
-.margin_top {
-    margin-top: 100px;
+.welcome_buttons {
+    margin-top: 75px;
 }
-.text_box {
-    width: 40%;
-}
-.event_slider_box {
-    position: relative;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 30px;
-}
-.arrow {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: var(--color-black);
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    color: #fff;
-    font-size: 22px;
-    font-weight: 700;
-    cursor: pointer;
-    margin: 10px;
-    z-index: 3;
-}
-#event_next_arrow, #tour_next_arrow {
-    right: 0;
-}
-.event_track_box {
-    width: 90%;
-    margin: 0px auto;
-    padding: 0px 40px;
-}
-.event {
-    background: var(--color-gray);
-    border-radius: 60px;
-    padding: 15px 15px 30px;
-    margin: 0px 5px;
-}
-.event img {
-    width: 100%;
-    border-radius: 40px;
-}
-.page_link, .btn_house_more {
-    padding: 5px 10px;
-    background: var(--color-green);
-    border-radius: 15px;
-    color: #FFF;
-    font-family: 'Montserrat Alternates', sans-serif;
-    font-size: 22px;
-    font-weight: 700;
+.welcome_excursions_button {
+    color: var(--color-white);
+    font-family: Oswald;
+    font-size: 18px;
+    font-weight: 500;
+    letter-spacing: 0.36px;
+    text-transform: uppercase;
     text-decoration: none;
-    transition: all .3s;
+    padding: 30px 70px;
+    border-radius: 12px;
+    background: var(--color-green);
+    box-shadow: 0px 5px 0px -2px rgba(120, 215, 125, 0.80), 0px 25px 45px -20px rgba(0, 0, 0, 0.65), 0px 0px 10px 0px rgba(255, 255, 255, 0.35) inset;
+    transition: background .3s;
 }
-.page_link:hover, .btn_house_more:hover {
-    background: var(--color-yellow);
-    color: var(--color-black);
+.welcome_excursions_button:hover {
+    background: var(--color-light-green);
 }
-.marry_img {
-    width: 60%;
-    border-radius: 40px;
-    margin-left: 30px;
+.welcome_history_button {
+    margin-left: 35px;
+    position: relative;
+    color: var(--color-white);
+    font-family: Oswald;
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 0.36px;
+    text-transform: uppercase;
+    text-decoration: none;
+    cursor: pointer;
 }
-.houses {
-    margin-top: 20px;
+.welcome_history_button::after {
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    display: block;
+    content: "";
+    width: 0px;
+    height: 3px;
+    border-radius: 10px;
+    background: var(--color-white);
+    transition: width .3s;
+}
+.welcome_history_button:hover::after {
+    width: 100%;
+}
+section {
+    padding: 100px 0px;
+    background: var(--color-white);
+}
+section:nth-child(odd) {
+    background: var(--color-light-gray);
+}
+.section_header {
     display: flex;
+    align-items: center;
     justify-content: space-between;
-}
-.house {
-    width: 31%;
-    border-radius: 40px;
-}
-.house_img_container {
-    width: 100%;
-    height: 400px;
-    border-radius: 30px;
-    overflow: hidden;
-}
-.house_img_container img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-.house_title {
-    font-family: 'Montserrat Alternates', sans-serif;
-    font-size: 22px;
-    font-weight: 600;
-}
-.house_desc {
-    font-size: 20px;
     margin-bottom: 20px;
 }
-.milk_img_container {
-    width: 50%;
-    height: 500px;
-    overflow: hidden;
-    border-radius: 20px;
-}
-.milk_img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-.milk_text {
-    width: 50%;
-    padding-right: 30px;
-}
-.goals_title {
-    width: 100%;
-    text-align: center;
-    font-size: 26px;
+.section_title {
+    color: var(--color-black);
+    font-family: Oswald;
+    font-size: 40px;
     font-weight: 700;
+    text-transform: uppercase;
+}
+.button_section_more, .card_button {
+    position: relative;
+    background: transparent;
+    border: none;
+    color: var(--color-green);
+    font-family: Oswald;
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 0.36px;
+    text-transform: uppercase;
+    text-decoration: none;
+    cursor: pointer;
+}
+.button_section_more::after, .card_button::after {
+    position: absolute;
+    bottom: -5px;
+    left: 0;
+    display: block;
+    content: "";
+    width: 0px;
+    height: 3px;
+    border-radius: 10px;
+    background: var(--color-green);
+    transition: width .3s;
+}
+.button_section_more:hover::after, .card_button:hover::after {
+    width: 100%;
+}
+.section_description {
+    width: 50%;
+    color: var(--color-gray);
+    font-family: Inter;
+    font-size: 18px;
+    line-height: 150%;
     margin-bottom: 30px;
 }
-.goals {
-    display: flex;
-    flex-wrap: wrap;
+.catalog {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 30px;
+    row-gap: 30px;
+}
+.card, .card_noshadow {
     width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    background: transparent;
+}
+.card {
+    background: var(--color-white);
+    box-shadow: 2px 4px 20px 0px rgba(0, 0, 0, 0.10);
+}
+.card_img_box {
+    width: 100%;
+    height: 200px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+.card_img_box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.card_info, .card_info_10 {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 15px 20px 24px;
+    height: calc(100% - 200px);
+}
+.card_info_10 {
+    padding: 10px 0px 0px 0px;
+}
+.card_title {
+    color: var(--color-black);
+    font-family: Oswald;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 150%;
+    text-transform: uppercase;
+}
+.card_description {
+    color: var(--color-gray);
+    font-family: Inter;
+    font-size: 16px;
+    line-height: 150%;
+}
+.card_line {
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
     justify-content: space-between;
 }
-.goal {
-    display: flex;
-    width: 50%;
-    margin-block: 10px;
-}
-.goal_img_container {
-    width: 50%;
-    overflow: hidden;
-    border-radius: 20px;
-}
-.goal_img_container img, .his_img_box img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-.goal_header {
-    font-size: 20px;
-    font-weight: 600;
-    font-family: 'Montserrat Alternates', sans-serif;
-}
-.goal_text {
-    width: 50%;
-    padding: 30px 10px;
-}
-.investors {
-    font-size: 20px;
+.card_price {
+    color: var(--color-red);
+    font-family: Oswald;
+    font-size: 24px;
     font-weight: 500;
-    text-align: center;
-    margin-block: 20px;
+    line-height: 150%;
 }
-.his_img_box {
-    width: 40%;
-    border-radius: 20px;
-    overflow: hidden;
+.card_line_label {
+    color: var(--color-gray);
+    font-family: Inter;
+    font-size: 16px;
+    line-height: 150%;
 }
-.his_text {
-    width: 40%;
+.card_line_value {
+    color: var(--color-black);
+    font-family: Inter;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 150%;
 }
-.entertainments {
+
+.products_images {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+    grid-template-rows: 270px 270px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-areas: "a a b" "c d b";
 }
-.entertainment_img_container {
+.product_image_box {
     width: 100%;
+    height: 100%;
+    border-radius: 8px;
     overflow: hidden;
-    border-radius: 10px;
-    height: 300px;
 }
-.entertainment_img_container:nth-child(1) {
-    grid-row: span 2;
-    height: calc(600px + 10px);
-}
-.entertainments:only-child > .entertainment_img_container:nth-child(2) {
-    grid-row: span 2;
-    height: calc(600px + 10px);
-}
-.entertainments > :only-child {
-    grid-column: span 2;
-}
-.entertainment_img_container img {
+.product_image_box img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
 }
-
-/* MEDIA QUARIES */
-@media (max-width: 1200px) {
+.product_image_box:nth-child(1) {
+    grid-area: a;
 }
-@media (max-width: 950px) {
-    .welcome_title {
-        font-size: 70px;
-    }
-    .welcome_title span {
-        font-size: 90px;
-    }
-    .text_box {
-        width: 100%;
-    }
-    .tours_slider_box {
-        width: 100%;
-    }
-    .track_box {
-        width: 100%;
-    }
-    .event_track_box {
-        width: 100%;
-    }
-    .marry_img {
-        width: 100%;
-        margin-top: 20px;
-    }
-    .houses {
-        flex-wrap: wrap;
-    }
-    .house {
-        width: 100%;
-    }
-    .milk_img_container {
-        width: 100%;
-    }
-    .milk_text {
-        width: 100%;
-        padding-right: 0px;
-        margin-bottom: 20px;
-    }
-    .page_link {
-        margin-block: 10px;
-    }
-    .goal {
-        width: 100%;
-    }
-    .marry_img {
-        margin-left: 0;
-    }
-    .his_img_box {
-        width: 100%;
-    }
-    .his_text {
-        width: 100%;
-    }
-    .entertainment_img_container {
-        height: 200px;
-    }
-    .entertainment_img_container:nth-child(1) {
-        height: calc(400px + 10px);
-    }
+.product_image_box:nth-child(2) {
+    grid-area: b;
 }
-
-@media (max-width: 650px) {
-
+.product_image_box:nth-child(3) {
+    grid-area: c;
 }
-@media (max-width: 550px) {
-    .welcome_title {
-        font-size: 40px;
-    }
-    .welcome_title span {
-        font-size: 60px;
-    }
-    .entertainment_img_container {
-        height: 150px;
-    }
-    .entertainment_img_container:nth-child(1) {
-        height: calc(300px + 10px);
-    }
+.product_image_box:nth-child(4) {
+    grid-area: d;
 }
-@media (max-width: 455px) {
-
+.history_container {
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.history_image_box {
+    width: 50%;
+    height: 430px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+.history_image_box img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.history_info {
+    width: 45%;
+}
+.history_text {
+    margin: 20px 0px 30px;
+    color: var(--color-gray);
+    font-family: Inter;
+    font-size: 18px;
+    line-height: 150%;
+}
+.contacts_container {
+    display: flex;
+}
+.contacts_address {
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    color: var(--color-black);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 150%;
+}
+.contacts_address img {
+    margin-right: 10px;
 }
