--- a/public/css/catalog.css
+++ b/public/css/catalog.css
@@ -3,11 +3,11 @@
     font-weight: 900;
     margin-bottom: 20px;
 }
-.catalog {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
+/*.catalog {*/
+/*    display: flex;*/
+/*    flex-wrap: wrap;*/
+/*    justify-content: space-between;*/
+/*}*/
 .item {
     width: 47%;
     margin-bottom: 80px;
