--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,24 @@
-.welcome {
+.welcome, .welcome_catalog{
     width: 100%;
     height: 800px;
-    background: url(../images/welcome.png);
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../images/welcome.png);
     display: flex;
     align-items: center;
+}
+.welcome_catalog{
+    height: 540px;
+}
+#welcome_entertainments{
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../images/entertainments.png);
+}
+#welcome_excursions{
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../images/excursions.png);
+}
+#welcome_houses{
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(../images/houses.png);
+}
+#welcome_events{
+    background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../images/events.png);
 }
 .welcome_block {
     max-width: 50%;
@@ -204,6 +219,10 @@ section:nth-child(odd) {
     font-size: 16px;
     font-weight: 500;
     line-height: 150%;
+}
+.card_a{
+    text-decoration: none;
+    color: var(--color-green);
 }
 
 .products_images {
