--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,7 @@ header {
 .logo_group, .socials_group {
     display: flex;
     align-items: center;
+    text-decoration: none;
 }
 .logo_img {
     width: 65px;
