--- a/public/css/house.css
+++ b/public/css/house.css
@@ -1,60 +1,91 @@
-.house_images {
-    width: 40%;
-}
-.house_img_box {
-    width: 100%;
-    height: 400px;
-    overflow: hidden;
-    border-radius: 15px;
-}
-.house_img_box img, .house_slider_img_box img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-    transition: all .3s;
-}
-.house_images_slider_box {
-    width: 100%;
-}
-.house_slider_img_box {
-    aspect-ratio: 1 / 1;
-    overflow: hidden;
-    padding: 5px;
-}
-.house_slider_img_box img {
-    border-radius: 10px;
+.house_image_slider_box {
+    position: relative;
+    width: 50%;
 }
 .house_info {
     width: 50%;
+    padding: 10px 10px 10px 50px;
+}
+.house_image_box {
+    padding: 10px;
+    aspect-ratio: 1 / 1;
+}
+.house_image_box img {
+    border-radius: 10px ;
+    width: 100%;
+    height: 100%;
+    object-position: center;
+    object-fit: cover;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+}
+.house_slider_arrow {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    font-size: 24px;
+    font-weight: 600;
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    background: #fff;
+    cursor: pointer;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+    transition: all .3s;
+}
+.house_slider_arrow:hover {
+    background: var(--color-yellow);
+}
+#house_image_slider_prev_btn {
+    left: 5px;
+}
+#house_image_slider_next_btn {
+    right: 5px;
+}
+.house_title {
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 25px;
+}
+.house_description {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 20px;
+    margin-bottom: 25px;
+}
+.house_price {
+    margin-bottom: 25px;
+    font-size: 20px;
+    font-weight: 500;
 }
 .btn_order {
-    width: 100%;
-    padding: 10px;
-    border-radius: 10px;
     background: var(--color-green);
-    border: none;
-    outline: none;
-    font-size: 18px;
     color: #fff;
-    text-align: center;
+    padding: 10px;
+    width: 100%;
+    border-radius: 15px;
+    border: none;
+    font-size: 20px;
     font-weight: 500;
     transition: all .3s;
     cursor: pointer;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 .btn_order:hover {
     background: var(--color-yellow);
     color: var(--color-black);
 }
-
 @media (max-width: 950px) {
-    .house_img_box {
-        height: 200px;
+    .flex_space_between {
+        flex-direction: column-reverse;
     }
-    .house_images {
+    .house_image_slider_box {
         width: 100%;
     }
     .house_info {
         width: 100%;
+        padding: 10px;
     }
 }
