--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,6 +23,9 @@
 #page_header_events {
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../images/events.png);
 }
+#page_header_contacts {
+    background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(../images/contacts.png);
+}
 .page_header_block {
     max-width: 50%;
 }
