--- a/public/css/style.css
+++ b/public/css/style.css
@@ -112,11 +112,11 @@ header {
     font-size: 14px;
     line-height: 150%;
 }
-.header_menu {
-    width: 100%;
+.header_menu_buttons {
     display: grid;
     column-gap: 30px;
     grid-template-columns: repeat(10, auto);
+    margin: 0 auto;
 }
 .header_button {
     position: relative;
@@ -141,6 +141,14 @@ header {
     background: var(--color-green);
     border-radius: 10px;
     bottom: 0;
+}
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background: var(--color-white);
+    z-index: 999;
+    box-shadow: 5px 0px 5px rgba(0, 0, 0, 0.2);
 }
 footer {
     width: 100%;
