--- a/public/css/history.css
+++ b/public/css/history.css
@@ -71,25 +71,99 @@ section:nth-child(odd) {
     text-indent: 30px;
     margin: 30px 0px;
 }
-.contacts_container {
+.columns_container {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-columns: 1fr 1fr;
     column-gap: 30px;
+    align-items: start;
 }
-.contacts_address {
-    margin-top: 40px;
-    display: flex;
-    align-items: center;
-    color: var(--color-black);
-    font-family: Inter;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 150%;
-}
-.contacts_address img {
-    margin-right: 10px;
-}
-.contacts_map {
+.history_img_box, .comparison {
+    width: 100%;
+    height: 100%;
     border-radius: 8px;
     overflow: hidden;
+}
+.history_img_box img {
+    width: 100%;
+    height: 100%;
+    object-position: center;
+    object-fit: cover;
+}
+
+.quote {
+    display: inline-block;
+    margin: 1em;
+    max-width: 100%;
+    overflow: hidden;
+}
+.quote blockquote {
+    background-color: #fff;
+    border: solid 2px #757575;
+    display: inline-block;
+    margin: 0;
+    padding: 1em;
+    position: relative;
+}
+.quote blockquote:before {
+    animation: clockwise 30s infinite linear;
+    background-color: #fff;
+    bottom: 10%;
+    content: "";
+    left: 0;
+    opacity: 0.5;
+    position: absolute;
+    right: 0;
+    top: 10%;
+}
+.quote blockquote:after {
+    animation: counter 30s infinite linear;
+    background-color: #fff;
+    bottom: 10%;
+    content: "";
+    left: 0;
+    opacity: 0.5;
+    position: absolute;
+    right: 0;
+    top: 10%;
+}
+.quote blockquote cite {
+    display: block;
+    font-style: italic;
+    text-align: right;
+}
+.quote blockquote cite:before {
+    content: "- ";
+}
+.quote blockquote > * {
+    position: relative;
+    z-index: 1;
+}
+.quote span {
+    position: absolute;
+    top: 50%;
+    color: rgba(0, 0, 0, 0.1);
+    font-size: 256px;
+}
+@keyframes clockwise {
+    0% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+@keyframes counter {
+    0% {
+        transform: rotate(0);
+    }
+    100% {
+        transform: rotate(-360deg);
+    }
+}
+
+@media (max-width:801px) {
+    .columns_container {
+        grid-template-columns: 1fr;
+        row-gap: 30px;
+    }
 }
