--- a/public/css/style.css
+++ b/public/css/style.css
@@ -162,3 +162,64 @@ footer {
     font-family: Inter;
     font-size: 12px;
 }
+.contacts_container {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 30px;
+}
+.contacts_address {
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    color: var(--color-black);
+    font-family: Inter;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 150%;
+}
+.contacts_address img {
+    margin-right: 10px;
+}
+.contacts_map {
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+@media (max-width:1281px) {
+    .container {
+        width: 1000px;
+    }
+}
+@media (max-width:1025px) {
+    .container {
+        width: 770px;
+    }
+}
+@media (max-width:801px) {
+    .container {
+        width: calc(100% - 40px);
+    }
+    .contacts_container {
+        grid-template-columns: 1fr;
+        row-gap: 30px;
+    }
+    .contacts_map {
+        height: 400px;
+    }
+    .contacts_info {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 20px;
+        row-gap: 20px;
+    }
+}
+@media (max-width:600px) {
+    .container {
+        width: calc(100% - 10px);
+    }
+}
+@media (max-width:550px) {
+    .contacts_info {
+        display: block;
+    }
+}
