--- a/public/css/history.css
+++ b/public/css/history.css
@@ -1,12 +1,13 @@
 .page_header {
     width: 100%;
-    height: 540px;
+    min-height: 540px;
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../images/muvir_story.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     display: flex;
     align-items: center;
+    padding: 100px 0px 50px;
 }
 .page_header_block {
     max-width: 50%;
