--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,14 +1,15 @@
 .page_header {
     width: 100%;
-    height: 540px;
+    min-height: 540px;
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     display: flex;
     align-items: center;
+    padding: 100px 0px 50px;
 }
 #page_header_home {
-    height: 800px;
+    min-height: 800px;
     background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(../images/welcome.png);
 }
 #page_header_entertainments {
