--- a/public/css/cafe.css
+++ b/public/css/cafe.css
@@ -149,13 +149,15 @@ section:nth-child(odd) {
 }
 .card_img_box {
     width: 100%;
-    height: 100%;
-    border-radius: 8px;
+    height: 350px;
     overflow: hidden;
+    padding: 5px;
+    margin: auto;
 }
 .card_img_box img {
     width: 100%;
     height: 100%;
+    border-radius: 8px;
     object-fit: cover;
     object-position: center;
 }
@@ -211,25 +213,31 @@ section:nth-child(odd) {
     text-decoration: none;
     color: var(--color-green);
 }
-.contacts_container {
-    display: grid;
-    grid-template-columns: auto auto;
-    column-gap: 30px;
+
+@media (max-width:1281px) {
+    .card {
+        grid-template-columns: 1fr 1fr;
+    }
+    .card_price {
+        font-size: 18px;
+    }
+    .card_button {
+        font-size: 16px;
+    }
 }
-.contacts_address {
-    margin-top: 40px;
-    display: flex;
-    align-items: center;
-    color: var(--color-black);
-    font-family: Inter;
-    font-size: 18px;
-    font-weight: 500;
-    line-height: 150%;
+@media (max-width:801px) {
+    .card {
+        grid-template-columns: 1fr 1.5fr;
+    }
+    .card_img_box {
+        max-height: 400px;
+    }
 }
-.contacts_address img {
-    margin-right: 10px;
-}
-.contacts_map {
-    border-radius: 8px;
-    overflow: hidden;
+@media (max-width:600px) {
+    .card {
+        grid-template-columns: 1fr;
+    }
+    .card_img_box {
+        max-height: 300px;
+    }
 }
