--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -8,6 +8,7 @@
     align-items: center;
 }
 .modal_content {
+    max-width: 600px;
     background: #fff;
     padding: 15px 30px;
     border-radius: 8px;
@@ -20,6 +21,9 @@
     align-items: center;
     font-family: Oswald;
 }
+#modal_title {
+    padding-right: 15px;
+}
 .modal_close {
     cursor: pointer;
     transition: all .3s;
@@ -27,12 +31,31 @@
 .modal_close:hover {
     color: var(--color-red);
 }
+.form_description {
+    color: var(--color-black);
+    font-family: Inter;
+    font-size: 16px;
+    line-height: 150%;
+    margin-bottom: 15px;
+}
 .modal_input_wrapper {
+    position: relative;
     display: flex;
     flex-direction: column;
     margin-block: 10px;
 }
-.modal_input_wrapper label, .price_title {
+.modal_input_wrapper label {
+    position: absolute;
+    left: 15px;
+    top: -8px;
+    color: var(--color-gray);
+    font-family: Inter;
+    font-size: 12px;
+    line-height: 150%;
+    background: var(--color-white);
+    padding: 0 5px;
+}
+.price_title {
     font-family: Oswald;
     font-weight: 500;
     font-size: 18px;
@@ -62,18 +85,30 @@
     color: var(--color-black);
     background: var(--color-light-green);
 }
-.modal_hint {
+.modal_input, .modal_input_wrapper textarea {
+    color: var(--color-black);
+    font-family: Inter;
     font-size: 16px;
-    color: #444;
+    line-height: 150%;
+    border-radius: 2px;
+    border: 1px solid var(--color-gray);
+    padding: 13px 15px;
 }
-.modal_input {
-    font-size: 16px;
-    border: none;
-    border-bottom: 1px solid var(--color-black);
-    border-radius: 3px;
-    padding: 5px;
+.thanks {
+    text-align: center;
 }
-.modal_input_wrapper textarea {
-    font-size: 16px;
-    padding: 5px;
+.thanks p:nth-child(2) {
+    color: var(--color-black);
+    font-family: Oswald;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 150%;
+    text-transform: uppercase;
+}
+.thanks p:nth-child(3) {
+    color: var(--color-gray);
+    font-family: Inter;
+    font-size: 18px;
+    line-height: 150%;
+    margin-bottom: 15px;
 }
